--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.1",
-    "grunt-dev-update": "^0.7.0"
+    "grunt-dev-update": "^0.7.0",
+    "grunt-bump": "^0.0.16"
   }
 }
